# variant-annotation-pipeline

./: .gitignore  CLAUDE.md  README.md  Snakefile  config.smoke.yaml  config.yaml  pyproject.toml
.claude/: settings.json
envs/: absplice.yaml  e2g.yaml  fastvep.post-deploy.sh  fastvep.yaml  nmd.yaml  parse.yaml  vep.yaml
profiles/slurm/: config.yaml
workflow/rules/: absplice.smk  chunk.smk  combine.smk  e2g.smk  fastvep.smk  merge.smk  nmd.smk  select.smk  vep.smk
workflow/scripts/: annotate_enhancers.py  build_canonical.py  build_transcript_metadata.py  combine_annotations.py  merge_annotations.py  parse_fastvep.py  parse_vep.py  run_absplice.py  select_analysis_set.py
