[project]
name = "variant_annotation"
version = "0.1.0"
description = "Dataset-agnostic functional annotation of a variant set (VEP + plugins, AbSplice). Consumes a generic unique-variant VCF."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "snakemake>=8",
    "polars>=1.0",
    "pyarrow>=15",
]

[dependency-groups]
dev = [
    "ipykernel",
    "jupytext",
]
